--- a/Frontend/pavuk/src/index.css
+++ b/Frontend/pavuk/src/index.css
@@ -9,10 +9,15 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 button {
   cursor: pointer;
 }
-
 
 
 @font-face {
