Add ClothingItemList component

--- a/Frontend/pavuk/src/components/user-account/ClothingItemList.css
+++ b/Frontend/pavuk/src/components/user-account/ClothingItemList.css
@@ -1,19 +1,20 @@
-.user-list-container {
+.clothing-list-container {
     width: 100%;
     background-color: white;
     border-radius: 20px;
-    overflow: auto;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
-.user-list-create-user-link, .user-list-edit-user-button, .user-list-remove-user-button {
+.clothing-list-create-clothing-link, .clothing-list-edit-product-button, .clothing-list-remove-product-button {
     background-color: #7A7D7F;
 }
 
-.user-list-create-user-link:hover, .user-list-edit-user-button:hover, .user-list-remove-user-button:hover {
+.clothing-list-create-clothing-link:hover, .clothing-list-edit-product-button:hover, .clothing-list-remove-product-button:hover {
     background-color: #909295;
 }
 
-.user-list-create-user-link {
+.clothing-list-create-clothing-link {
     display: inline-block;
     border-radius: 14px;
     font-family: "Gilroy Bold";
@@ -22,28 +23,28 @@
     transition: 0.2s;
 }
 
-.user-list-thead {
+.clothing-list-thead {
     background-color: #A5A7AA;
 }
 
-.user-list-th {
+.clothing-list-th {
     font-family: "Gilroy Bold";
     color: white;
 }
 
-.user-list-tr {
+.clothing-list-tr {
     color: #7A7D7F;
 }
 
-.user-list-tr-removed {
+.clothing-list-tr-removed {
     color: #BCBEC1;
 }
 
-.user-list-td {
+.clothing-list-td {
     font-family: "Gilroy SemiBold";
 }
 
-.user-list-edit-user-button, .user-list-remove-user-button {
+.clothing-list-edit-product-button, .clothing-list-remove-product-button {
     border-radius: 10px;
     font-family: "Gilroy Bold";
     color: white;
